--- a/popup.css
+++ b/popup.css
@@ -4,11 +4,11 @@ body {
 }
 
 #cover-letter-sidebar {
-  position: fixed;
+  position: static;
   top: 0;
   right: 0;
-  width: 30vw;
-  height: 100%;
+  width: 300px;
+  height: 500px;
   background-color: #ffffff;
   box-shadow: -3px 0px 5px rgba(0, 0, 0, 0.1);
   z-index: 9999;
